--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "rimraf": "^3.0.0",
     "ts-loader": "^6.2.0",
     "ts-node": "^8.5.2",
+    "ts-sinon": "^1.2.0",
     "typescript": "^3.7.2",
     "webpack": "^4.41.0",
     "webpack-bundle-analyzer": "^3.5.2",
